--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -6,14 +6,14 @@
     android:gravity="center"
     android:background="@color/bg_screen1" >
 
-   <ImageView
+    <ImageView
         android:id="@+id/imageView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:cropToPadding="false"
 
         android:scaleType="centerCrop"
-        android:src="@drawable/splash"
+        android:src="@drawable/basketpart1"
         tools:ignore="ContentDescription" />
 
 </RelativeLayout>
