--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#333333</color>
 
     <!-- Screens background color-->
-    <color name="bg_screen1">#00A0E3</color>
+    <color name="bg_screen1">#00a0e3</color>
     <color name="bg_screen2">#00A0E3</color>
     <color name="bg_screen3">#00A0E3</color>
     <color name="bg_screen4">#00A0E3</color>
