--- a/app/src/main/res/layout/activity_me1.xml
+++ b/app/src/main/res/layout/activity_me1.xml
@@ -1,18 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_screen1">
+    tools:context=".Me1">
 
     <ImageView
-        android:id="@+id/imageView3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:contentDescription="@string/splash_desc"
-        android:scaleType="centerCrop"
+        android:layout_height="100dp"
+        android:paddingLeft="10dp"
+        android:paddingTop="10dp"
+        android:src="@drawable/ic_launcher_background"
         />
-       # app:srcCompat="@drawable/basketpart2"
-
-
 </RelativeLayout>
