--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -13,5 +13,6 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:contentDescription="@string/splash_desc"
-        android:src="@drawable/fig"/>
+        />
+        #android:src="@drawable/fig"
 </RelativeLayout>
