--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -11,9 +11,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:cropToPadding="false"
-
         android:scaleType="centerCrop"
-        android:src="@drawable/basketpart1"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+
+        />
+
+        #android:src="@drawable/basketpart1"
+
 
 </RelativeLayout>
