--- a/app/src/main/res/layout/activity_just_me.xml
+++ b/app/src/main/res/layout/activity_just_me.xml
@@ -7,6 +7,21 @@
     android:layout_height="match_parent"
     tools:context=".JustMe">
 
+    <ImageView
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="0dp"
+        android:layout_marginBottom="0dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:paddingTop="0dp"
+        android:src="@drawable/ic_launcher_background" />
+
 
 
 
