Revert "Added new images, and background for the story"
This reverts commit 40aa3ba

--- a/app/src/main/res/layout/welcome_slide1.xml
+++ b/app/src/main/res/layout/welcome_slide1.xml
@@ -13,10 +13,9 @@
         android:cropToPadding="false"
         android:scaleType="centerCrop"
         tools:ignore="ContentDescription"
+        android:src="@drawable/basketpart3"
+    />
 
-        />
-
-        #android:src="@drawable/basketpart1"
 
 
 </RelativeLayout>
