--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,5 +14,13 @@
         android:layout_alignParentTop="true"
         android:contentDescription="@string/splash_desc"
         android:src="@drawable/fig"
-        />
+        android:visibility="visible" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="visible"
+        app:srcCompat="@drawable/ic_logo" />
+
 </RelativeLayout>
