--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="colorPrimary">#00A0E3</color>
     <color name="colorPrimaryDark">#00A0E3</color>
     <color name="colorAccent">#333333</color>
+    <color name="GreenBack">#16e031</color>
 
     <!-- Screens background color-->
     <color name="bg_screen1">#00a0e3</color>
